<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/block_user_prompt"
        android:textSize="@dimen/instructions_size" />

    <EditText
        android:id="@+id/usernameToBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:padding="20dp" />
    <Button
        android:id="@+id/blockUserByUsernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameToBlock"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAllCaps="false"
        android:text="@string/block_user" />
</RelativeLayout>