<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/usernameToStartChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RadioButton
            android:id="@+id/usernameRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/real_username"
            android:padding="10dp"></RadioButton>
        <RadioButton
            android:id="@+id/pseudonymRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pseudonym"
            android:padding="10dp"></RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/start_chat_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_start_chat"/>


</LinearLayout>