<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:srcCompat="@drawable/chinchillachatlogo_fi1" />

    <Button
        android:id="@+id/findAFriendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@id/imageView"
        android:layout_alignEnd="@id/imageView"
        android:layout_marginTop="75dp"
        android:textAllCaps="false"
        android:text="@string/action_find_a_friend" />

    <Button
        android:id="@+id/chatNowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/imageView"
        android:layout_alignEnd="@id/imageView"
        android:layout_below="@+id/findAFriendButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/action_chat_now"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/myChatsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/imageView"
        android:layout_alignEnd="@id/imageView"
        android:layout_below="@+id/chatNowButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/action_my_chats"
        android:textAllCaps="false" />

</RelativeLayout>