<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/accountSettingsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/title_size"
                android:text="@string/account_settings_title"/>

            <TextView
                android:id="@+id/changeUsernameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/settingsTV"
                android:textSize="@dimen/instructions_size"
                android:text="@string/change_username"/>

            <TextView
                android:id="@+id/changePasswordTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/changeUsernameTV"
                android:textSize="@dimen/instructions_size"
                android:text="@string/change_password"/>

            <EditText
                android:id="@+id/passwordChangeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/changePasswordTV"
                android:textSize="@dimen/instructions_size"/>

            <TextView
                android:id="@+id/confirmChangePasswordTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/passwordChangeET"
                android:textSize="@dimen/instructions_size"
                android:text="@string/confirm_change_password"/>

            <EditText
                android:id="@+id/confirmPasswordChangeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/confirmChangePasswordTV"
                android:textSize="@dimen/instructions_size"/>

            <Button
                android:id="@+id/confirmSettingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textAllCaps="false"
                android:textSize="@dimen/button_text_size"
                android:text="@string/action_confirm_settings" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>